# readyset

./: Cargo.toml  docker-compose.yml
database-utils/: Cargo.toml
database-utils/src/: error.rs  lib.rs
dataflow-expression/src/: binary_operator.rs  lower.rs
mongodb-srv/: Cargo.toml
mongodb-srv/src/: lib.rs
nom-sql/src/: common.rs  dialect.rs  sql_type.rs  transaction.rs
readyset/: Cargo.toml
readyset-adapter/src/: views_synchronizer.rs
readyset-client-metrics/src/: lib.rs
readyset-client/src/: controller.rs
readyset-clustertest/src/: lib.rs
readyset-data/src/: dialect.rs
readyset-errors/: Cargo.toml
readyset-errors/src/: lib.rs
readyset-logictest/src/: runner.rs
readyset-mongodb/: Cargo.toml  README.md
readyset-mongodb/src/: backend.rs  error.rs  lib.rs  query_handler.rs  upstream.rs
readyset-repl/src/: main.rs
readyset/src/: lib.rs  main.rs  mongodb.rs
replicators/: Cargo.toml
replicators/src/: lib.rs  noria_adapter.rs
replicators/src/mongodb_connector/: connector.rs  mod.rs
