[package]
name = "readyset-mongodb"
version = "0.0.1"
publish = false
authors = ["ReadySet Technology, Inc. <info@readyset.io>"]
edition = "2021"

[target.'cfg(not(target_env="msvc"))'.dependencies]
tikv-jemallocator = "0.4"

[dependencies]
clap = { version = "4.2", features = ["derive","env"] }
async-trait = "0.1.51"
fail = "0.5.0"
lazy_static = "1.0"
streaming-iterator = "0.1"
futures-util = "0.3"
pin-project = "1.0"
mongodb-srv = { path = "../mongodb-srv" }
mongodb = { workspace = true }

readyset-client = { path = "../readyset-client" }
readyset-errors = { path = "../readyset-errors" }
readyset-data = { path = "../readyset-data" }
readyset-adapter = { path = "../readyset-adapter" }
readyset-client-metrics = { path = "../readyset-client-metrics" }
readyset-version = { path = "../readyset-version" }
failpoint-macros = { path = "../failpoint-macros" }
nom-sql = { path = "../nom-sql" }
tokio = { workspace = true, features = ["full"] }
tracing = { version = "0.1", features = ["release_max_level_debug"] }
anyhow = "1.0.42"
derive_more = "0.99.16"
thiserror = "1.0.26"
itertools = "0.10"
readyset-util = { path = "../readyset-util" }

[dev-dependencies]
readyset-client-test-helpers = { path = "../readyset-client-test-helpers", features = ["mysql"] }
readyset-client-metrics = { path = "../readyset-client-metrics" }
readyset-telemetry-reporter = { path = "../readyset-telemetry-reporter", features = ["test-util"] }
readyset-server = { path = "../readyset-server" }
test-utils = { path = "../test-utils" }
chrono = "0.4.19"
# mysql = "23.0.1"
paste = "1.0.5"
proptest = "1.0.0"
serial_test = "0.5.1"
test-strategy = "0.2.0"
readyset-tracing = { path = "../readyset-tracing" }

[features]
vertical_tests = []
# Redact the display of strings marked sensitive from logs and error messages
redact_sensitive = ["readyset-util/redact_sensitive"]
failure_injection = ["fail/failpoints", "readyset-client/failure_injection", "readyset-server/failure_injection"]
fallback_cache = ["readyset-adapter/fallback_cache", "readyset-client-metrics/fallback_cache"]
